fix: alignment of buttons and text (#171)

--- a/client/src/components/ThemeToggle/Style.module.css
+++ b/client/src/components/ThemeToggle/Style.module.css
@@ -1,6 +1,6 @@
 .toggleIcon {
   font-size: 24px;
-  display: flex;
+  padding-top: 5px;
 }
 
 .FiMoon {
